fix(reportRenderer): do word break in total evaluation count
* in case there is not enough space
* fixed for german translation

related to #OPT-2577

--- a/client/src/modules/components/ReportRenderer/ReportRenderer.scss
+++ b/client/src/modules/components/ReportRenderer/ReportRenderer.scss
@@ -26,5 +26,7 @@
     text-align: center;
     border-left: 1px solid lightgray;
     width: 175px;
+    overflow-wrap: break-word;
+    hyphens: auto;
   }
 }
